# quick-scraper-notifier

./: README.md  pyproject.toml  requirements.txt
qsn/: campsite.py  qsn.py
tests/: test_qsn.py
